hypr: splitratio presets

--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -92,7 +92,7 @@ submap=reset
 # ---------------
 # Move and resize
 # ---------------
-bind = $mod CONTROL, m, submap, move
+bind = $mod, m, submap, move
 submap=move
 # move
 binde=,l,moveactive,30 0
@@ -104,12 +104,22 @@ binde=SHIFT,l,resizeactive,10 0
 binde=SHIFT,h,resizeactive,-10 0
 binde=SHIFT,k,resizeactive,0 -10
 binde=SHIFT,j,resizeactive,0 10
-# float
-bind=$mod,f,togglefloating, 
+# splits
+bind = ,r, togglesplit, # rotate
+bind = ,f, splitratio, exact 1.5 # focus
+bind = ,e, splitratio, exact 1 # even
+bind = ,m, splitratio, exact 1.25 # main
+bind = ,i, splitratio, exact 0.75 # inverse
 # exit
-bind=$mod,f,submap,reset 
+bind=,r,submap,reset 
+bind=,f,submap,reset 
+bind=,e,submap,reset 
+bind=,m,submap,reset 
+bind=,i,submap,reset 
 bind=,escape,submap,reset 
 submap=reset
+
+
 
 # ==============================================================================
 
@@ -124,7 +134,6 @@ bind = $mod CONTROL, f, exec, closebar
 
 
 bind = $mod, p, pseudo, 
-bind = $mod, r, togglesplit,
 
 # Focus
 bind = $mod, h, movefocus, l
