hypr: flat accel profile by default, adaptive for touchpad

--- a/global/dot-config/hypr/devices.conf
+++ b/global/dot-config/hypr/devices.conf
@@ -19,8 +19,8 @@ input {
         natural_scroll = no
     }
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-    accel_profile = adaptive
+    sensitivity = 0 # [-1.0, 1.0]
+    accel_profile = flat
 
     touchpad {
             disable_while_typing = no
@@ -30,20 +30,9 @@ input {
 }
 
 device:at-translated-set-2-keyboard {
-    kb_layout = code,code-dvorak
     kb_options = caps:escape
 }
 
-device:microsoft-microsoft®-2.4ghz-transceiver-v9.0 {
-    kb_layout = code-dvorak,us
-    kb_options = caps:escape,ctrl:menu_rctrl
-}
-
-device:microsoft-microsoft®-2.4ghz-transceiver-v9.0-mouse {
-    sensitivity = -0.1
-    accel_profile = flat
-}
-
-device:logitech-gaming-mouse-g502 {
-    accel_profile = flat
+device:syna2393:00-06cb:7a13-touchpad {
+    accel_profile = adaptive
 }
