hypr: togglebar keybind

--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -130,7 +130,7 @@ submap=reset
 bind = $mod, f, togglefloating, 
 bind = $mod SHIFT, f, fullscreen, 
 bind = , F11, fakefullscreen, 
-bind = $mod CONTROL, f, exec, closebar
+bind = $mod CONTROL, f, exec, togglebar
 
 
 bind = $mod, p, pseudo, 
