--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -90,16 +90,16 @@ bind-key -n S-Right next-window
 bind-key -n S-Left  previous-window
 bind-key Tab next-window
 
-bind-key "+" select-window -t 1
-bind-key "[" select-window -t 2
-bind-key "{" select-window -t 3
-bind-key "(" select-window -t 4
-bind-key "#" select-window -t 5
-bind-key "=" select-window -t 6
-bind-key ")" select-window -t 7
-bind-key "}" select-window -t 8
-bind-key "]" select-window -t 9
-bind-key "*" select-window -t 10
+bind-key -n "M-+" select-window -t 1
+bind-key -n "M-[" select-window -t 2
+bind-key -n "M-{" select-window -t 3
+bind-key -n "M-(" select-window -t 4
+bind-key -n "M-#" select-window -t 5
+bind-key -n "M-=" select-window -t 6
+bind-key -n "M-)" select-window -t 7
+bind-key -n "M-}" select-window -t 8
+bind-key -n "M-]" select-window -t 9
+bind-key -n "M-*" select-window -t 10
 
 bind-key C-h run-shell "tmux-swap-window left"
 bind-key C-l run-shell "tmux-swap-window right"
@@ -125,6 +125,7 @@ bind-key \\ switch-client -l
 
 # toggle status bar
 bind-key f if-shell "[[ `tmux show-option -qv status` != on ]]" "set-option status off" "set-option status on"
+
 
 
 # set -g status on
