hypr: remove grouping binds

--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -208,37 +208,13 @@ binde = $mod, Down, moveactive, 0 30
 # ==============================================================================
 
 # ------------------------------------------------------------------------------
-#                                  Grouping
-# ------------------------------------------------------------------------------
-bind=$mod CONTROL, g, togglegroup,
-bind=$mod CONTROL, g, resizeactive, 0 0
-bind=$mod, g, submap, group
-submap=group
-bind=,g,togglegroup,
-bind=,g,resizeactive, 0 0
-bind=,h,moveintogroup,l
-bind=,j,moveintogroup,d
-bind=,k,moveintogroup,u
-bind=,l,moveintogroup,r
-bind=,tab,changegroupactive,f
-bind=,o,moveoutofgroup,
-# exit
-bind=,g,submap,reset
-bind=,h,submap,reset
-bind=,j,submap,reset
-bind=,k,submap,reset
-bind=,l,submap,reset
-bind=,tab,submap,reset
-bind=,o,submap,reset
-bind=,escape,submap,reset
-submap=reset
-# ==============================================================================
-
-# ------------------------------------------------------------------------------
 #                       Special workspaces (Scratchpads)
 # ------------------------------------------------------------------------------
 bind = $mod, backslash, exec, [workspace special:scratch]tm startup scratch
 bindr = $mod, backslash, togglespecialworkspace, scratch
+
+bind = $mod, t, exec, [workspace special:scratch]tm startup scratch
+bindr = $mod, t, togglespecialworkspace, scratch
 
 bind = $mod SHIFT, backslash, exec, [noanim; workspace special:browser]firefox-scratch
 bindr = $mod SHIFT, backslash, togglespecialworkspace, browser
