hypr: better scratchpad binds

--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -18,7 +18,6 @@ bind = $mod SHIFT, g, exec, firefox "https://github.com/e-cal"
 bind = $mod, q, killactive, 
 # bindr = CONTROL ALT, Delete, exit, 
 bindr = CONTROL ALT, Delete, exec, eww -c ~/.config/eww/bar close bar; launch_dashboard
-# ==============================================================================
 
 # ------------------------------------------------------------------------------
 #                                  Submaps
@@ -119,10 +118,6 @@ bind=,i,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
-
-
-# ==============================================================================
-
 # ------------------------------------------------------------------------------
 #                                  Windows
 # ------------------------------------------------------------------------------
@@ -156,28 +151,6 @@ bind = $mod SHIFT, K, resizeactive, 0 -30
 bind = $mod SHIFT, J, resizeactive, 0 30
 
 # Workspaces
-# bind = $mod, 1, workspace, 1
-# bind = $mod, 2, workspace, 2
-# bind = $mod, 3, workspace, 3
-# bind = $mod, 4, workspace, 4
-# bind = $mod, 5, workspace, 5
-# bind = $mod, 6, workspace, 6
-# bind = $mod, 7, workspace, 7
-# bind = $mod, 8, workspace, 8
-# bind = $mod, 9, workspace, 9
-# bind = $mod, 0, workspace, 10
-# 
-# bind = $mod SHIFT, 1, movetoworkspacesilent, 1
-# bind = $mod SHIFT, 2, movetoworkspacesilent, 2
-# bind = $mod SHIFT, 3, movetoworkspacesilent, 3
-# bind = $mod SHIFT, 4, movetoworkspacesilent, 4
-# bind = $mod SHIFT, 5, movetoworkspacesilent, 5
-# bind = $mod SHIFT, 6, movetoworkspacesilent, 6
-# bind = $mod SHIFT, 7, movetoworkspacesilent, 7
-# bind = $mod SHIFT, 8, movetoworkspacesilent, 8
-# bind = $mod SHIFT, 9, movetoworkspacesilent, 9
-# bind = $mod SHIFT, 0, movetoworkspacesilent, 10
-
 bind = $mod, plus, workspace, 1
 bind = $mod, bracketleft, workspace, 2
 bind = $mod, braceleft, workspace, 3
@@ -205,24 +178,24 @@ binde = $mod, Right, moveactive, 30 0
 binde = $mod, Left, moveactive, -30 0
 binde = $mod, Up, moveactive, 0 -30
 binde = $mod, Down, moveactive, 0 30
-# ==============================================================================
 
 # ------------------------------------------------------------------------------
 #                       Special workspaces (Scratchpads)
 # ------------------------------------------------------------------------------
 bind = $mod, backslash, exec, [workspace special:scratch]tm startup scratch
-bindr = $mod, backslash, togglespecialworkspace, scratch
-
+bind = $mod, backslash, togglespecialworkspace, scratch
 bind = $mod, t, exec, [workspace special:scratch]tm startup scratch
-bindr = $mod, t, togglespecialworkspace, scratch
+bind = $mod, t, togglespecialworkspace, scratch
 
 bind = $mod SHIFT, backslash, exec, [noanim; workspace special:browser]firefox-scratch
-bindr = $mod SHIFT, backslash, togglespecialworkspace, browser
+bind = $mod SHIFT, backslash, togglespecialworkspace, browser
+bind = $mod, b, exec, [noanim; workspace special:browser]firefox-scratch
+bind = $mod, b, togglespecialworkspace, browser
 
-# bind = $mod CONTROL, backslash, exec , [workspace special:ask]tm startup ask
 bind = $mod CONTROL, backslash, exec, [noanim; workspace special:ask]firefox-scratch ask
-bindr = $mod CONTROL, backslash, togglespecialworkspace, ask
-# ==============================================================================
+bind = $mod CONTROL, backslash, togglespecialworkspace, ask
+bind = $mod, g, exec, [noanim; workspace special:ask]firefox-scratch ask
+bind = $mod, g, togglespecialworkspace, ask
 
 # ------------------------------------------------------------------------------
 #                               Function keys
@@ -231,7 +204,6 @@ bind = ,XF86AudioRaiseVolume, exec, volume up
 bind = ,XF86AudioLowerVolume, exec, volume down
 bind = ,XF86AudioMute, exec, volume mute
 bind = ,XF86AudioPlay, exec, playerctl play-pause
-# ==============================================================================
 
 # ------------------------------------------------------------------------------
 #                                   Mouse
@@ -239,7 +211,6 @@ bind = ,XF86AudioPlay, exec, playerctl play-pause
 # Move/resize windows with mod + LMB/RMB and dragging
 bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
-bind = , mouse:275, exec, modremap
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -251,4 +222,3 @@ gestures {
     workspace_swipe_forever = false
     workspace_swipe_numbered = false
 }
-# ==============================================================================
