hypr: fakefullscreen in firefox

--- a/global/dot-config/hypr/windows.conf
+++ b/global/dot-config/hypr/windows.conf
@@ -8,15 +8,19 @@ windowrule=workspace 4,discord
 # windowrule=workspace 4,zoom
 windowrule=nofullscreenrequest,zoom
 
+
 # PiP
 windowrule=nofullscreenrequest,title:Picture\-in\-Picture
 windowrule=noblur,title:Picture\-in\-Picture
 windowrule=opacity 1.0 override 1.0 override,title:Picture\-in\-Picture
 # windowrule=nodim,title:Picture-in-Picture
 
+windowrule=fakefullscreen,firefox
 
-# Workspace rules
-workspace=special,bordersize:0
+
+workspace=special:scratch,gapsin:-50,gapsout:-50
+workspace=special:ask,gapsin:-50,gapsout:-50
+workspace=special:browser,gapsin:-50,gapsout:-50
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
