--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -1,31 +1,32 @@
 $mod = SUPER
 
-# ------------------------------------------------------------------------------
-#                                  Programs
-# ------------------------------------------------------------------------------
+# Programs
 bind = $mod, Return, exec, kitty
-bind = $mod, w, exec, firefox
 bind = $mod, e, exec, nemo
-bind = $mod SHIFT, m, exec, [workspace 6]thunderbird
-bind = $mod, s, exec, [workspace 5;tiled]spotify
-bind = $mod SHIFT, s, exec, [noanim]grimblast copy area && wl-paste | swappy -f -
-bind = $mod, c, exec, hyprpicker -a
-
-bind = $mod, semicolon, exec, toggle-kbd-layout
-
+bind = $mod, s, exec, [noanim]flameshot gui
+bind = $mod, w, exec, firefox
+bind = $mod SHIFT, w, exec, firefox-float
 bind = $mod SHIFT, g, exec, firefox "https://github.com/e-cal"
+bind = $mod SHIFT, m, exec, [workspace 6]thunderbird
+bind = $mod SHIFT, s, exec, [workspace 5;tiled]spotify
+bind = $mod SHIFT, c, exec, hyprpicker -a
 
+# Control
+bind = $mod, semicolon, exec, toggle-kbd-layout
 bind = $mod, q, killactive, 
-# bindr = CONTROL ALT, Delete, exit, 
-bindr = CONTROL ALT, Delete, exec, eww -c ~/.config/eww/bar close bar; launch_dashboard
+bind = CONTROL ALT, Delete, exec, eww -c ~/.config/eww/bar close bar; launch_dashboard
 
-# ------------------------------------------------------------------------------
-#                                  Submaps
-# ------------------------------------------------------------------------------
+# Layout
+bind = $mod,r, togglesplit, 
+bind = $mod, f, togglefloating,
+bind = $mod SHIFT, f, fullscreen, 
+# bind = , F11, fakefullscreen, 
+bind = $mod CONTROL, f, exec, togglebar
+bind = $mod, p, pseudo, 
 
-# -----------
-# General
-# -----------
+# --------------
+# General submap
+# --------------
 bind=$mod, Space, submap, general
 submap=general
 # brightness
@@ -53,26 +54,10 @@ bind=,asterisk,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
-# -----------
-# Screenshots
-# -----------
-bind=$mod CONTROL, s, submap, screenshot
-submap=screenshot
-# screenshot
-bind=SHIFT,s,exec,[noanim]grimblast copy screen
-bind=,w,exec,[noanim]grimblast copy window
-bind=,s,exec,[noanim]grimblast copysave area
-# exit
-bind=,s,submap,reset 
-bind=,w,submap,reset 
-bind=SHIFT,s,submap,reset 
-bind=,escape,submap,reset 
-submap=reset
-
 # ---------
 # Comm apps
 # ---------
-bind=$mod CONTROL, c, submap, comm
+bind=$mod, c, submap, comm
 submap=comm
 # apps
 bind=,s,exec,slack
@@ -121,14 +106,6 @@ submap=reset
 # ------------------------------------------------------------------------------
 #                                  Windows
 # ------------------------------------------------------------------------------
-# Layout
-bind = $mod, f, togglefloating, 
-bind = $mod SHIFT, f, fullscreen, 
-bind = , F11, fakefullscreen, 
-bind = $mod CONTROL, f, exec, togglebar
-
-
-bind = $mod, p, pseudo, 
 
 # Focus
 bind = $mod, h, movefocus, l
@@ -182,18 +159,14 @@ binde = $mod, Down, moveactive, 0 30
 # ------------------------------------------------------------------------------
 #                       Special workspaces (Scratchpads)
 # ------------------------------------------------------------------------------
-bind = $mod, backslash, exec, [workspace special:scratch]tm startup scratch
-bind = $mod, backslash, togglespecialworkspace, scratch
+bind = $mod SHIFT, backslash, movetoworkspacesilent, special:scratch
+
 bind = $mod, t, exec, [workspace special:scratch]tm startup scratch
 bind = $mod, t, togglespecialworkspace, scratch
 
-bind = $mod SHIFT, backslash, exec, [noanim; workspace special:browser]firefox-scratch
-bind = $mod SHIFT, backslash, togglespecialworkspace, browser
 bind = $mod, b, exec, [noanim; workspace special:browser]firefox-scratch
 bind = $mod, b, togglespecialworkspace, browser
 
-bind = $mod CONTROL, backslash, exec, [noanim; workspace special:ask]firefox-scratch ask
-bind = $mod CONTROL, backslash, togglespecialworkspace, ask
 bind = $mod, g, exec, [noanim; workspace special:ask]firefox-scratch ask
 bind = $mod, g, togglespecialworkspace, ask
 
