--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -4,11 +4,12 @@ $mod = SUPER
 bind = $mod, Return, exec, kitty
 bind = $mod, e, exec, nemo
 bind = $mod, s, exec, [noanim]flameshot gui
+bind = $mod SHIFT, s, exec, [noanim]flameshot gui
 bind = $mod, w, exec, firefox
 bind = $mod SHIFT, w, exec, firefox-float
 bind = $mod SHIFT, g, exec, firefox "https://github.com/e-cal"
 bind = $mod SHIFT, m, exec, [workspace 6]thunderbird
-bind = $mod SHIFT, s, exec, [workspace 5;tiled]spotify
+bind = $mod CONTROL, s, exec, [workspace 5;tiled]spotify
 bind = $mod SHIFT, c, exec, hyprpicker -a
 
 # Control
