--- a/global/dot-config/kitty/kitty.conf
+++ b/global/dot-config/kitty/kitty.conf
@@ -36,33 +36,19 @@ copy_on_select          clipboard
 mouse_map ctrl+left press ungrabbed mouse_selection rectangle
 mouse_map ctrl+shift+left press ungrabbed mouse_selection rectangle
 
+# tabs
+map ctrl+shift+r set_tab_title
+tab_bar_edge bottom
+tab_bar_align right
+tab_title_template "{title.split(':')[0]}"
+tab_bar_style fade 
+tab_fade 0.25 0.5 0.75 1
+
+
+
 # =============================================================================
 # colors
 # =============================================================================
-
-# Custom
-# background				#212121
-# foreground				#D7DAE0
-# cursor					#EEFFFF
-# selection_background    #FFCB6B
-# selection_foreground	#212121
-# color0					#212121
-# color8					#8E8C9C
-# color1					#F07178
-# color9					#E28C8C
-# color2					#B3E1A3
-# color10					#B3E1A3
-# color3					#FFCB6B
-# color11					#FFA570
-# color4					#A4B9EF
-# color12					#A4B9EF
-# color5					#C6AAE8
-# color13					#C6AAE8
-# color6					#4ec9b0
-# color14					#8CDBCD
-# color7					#D7DAE0
-# color15				    #3a3a3a
-
 
 ## name:     Catppuccin Kitty Mocha
 ## author:   Catppuccin Org
@@ -96,8 +82,11 @@ macos_titlebar_color system
 active_tab_foreground   #11111B
 active_tab_background   #CBA6F7
 inactive_tab_foreground #CDD6F4
-inactive_tab_background #181825
-tab_bar_background      #11111B
+inactive_tab_background #24273a
+tab_bar_background      #24273a
+# inactive_tab_background #181825
+# tab_bar_background     #11111B
+
 
 # Colors for marks (marked text in the terminal)
 mark1_foreground #1E1E2E
