tmux: new better toggleterm

--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -52,10 +52,8 @@ bind-key -T copy-mode-vi Y send-keys -X copy-line
 bind-key R source-file ~/.config/tmux/tmux.conf
 
 # panes (splits)
-bind-key V split-window -h
-bind-key v split-window -h -p 40
-bind-key S split-window -v
-bind-key s split-window -v -p 40
+bind-key v split-window -h
+bind-key s split-window -v
 
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
@@ -90,6 +88,7 @@ bind-key -n S-Right next-window
 bind-key -n S-Left  previous-window
 bind-key Tab next-window
 
+bind-key w choose-window
 bind-key -n "M-+" select-window -t 1
 bind-key -n "M-[" select-window -t 2
 bind-key -n "M-{" select-window -t 3
@@ -114,22 +113,23 @@ bind-key "*" select-window -t 10
 bind-key C-h run-shell "tmux-swap-window left"
 bind-key C-l run-shell "tmux-swap-window right"
 
-# kill
 bind-key Q kill-session
 bind-key q kill-window
 bind-key w kill-pane
 
 # custom commands
 bind-key Enter display-popup -E "tm"
-bind-key Space display-popup -E "tm"
-bind-key t run-shell "toggle-term"
+bind-key S run-shell "tmux choose-session"
+bind-key t run-shell "toggleterm h"
+bind-key T run-shell "toggleterm v"
 bind-key N new-window -d -n jn "tmux send-keys -t jn 'jupyter notebook' Enter;zsh"
 bind-key ? run-shell "tmux-ask"
-bind-key / run-shell "tmux-ask"
 bind-key . run-shell "tmux display-popup -E cfgdirs tmux"
+bind-key c run-shell "tm config"
+bind-key C run-shell "tm attach cfg"
 bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (printf '\nShowing dotfiles lazygit instead...\n' && read -srn1 && .lg)"
 bind-key i new-window -n ipy "ipython --TerminalInteractiveShell.editing_mode=vi"
-# bind-key BSpace run-shell "[[ $(wmctrl -l | rg $(xprop -root _NET_ACTIVE_WINDOW | awk '{print $5}' | sed 's/0x//') | awk '{print $4}') == 'scratch' ]] && tm attach scratch || tm attach main; tm kill $(tmux display-message -p '#S')"
+bind-key D run-shell "tm attach main; tm kill $(tmux display-message -p '#S')"
 bind-key \\ switch-client -l
 
 # toggle status bar
