hypr: fix save as fullscreen

--- a/global/dot-config/hypr/windows.conf
+++ b/global/dot-config/hypr/windows.conf
@@ -17,6 +17,7 @@ windowrule=opacity 1.0 override 1.0 override,title:Picture\-in\-Picture
 
 windowrule=fakefullscreen,firefox
 windowrule=nofullscreenrequest,title:Enter name of file to save to…
+windowrule=nofullscreenrequest,title:Save As
 
 
 workspace=special:scratch,gapsin:-50,gapsout:-50
