kitty/zsh: alt+r reload, ctrl+alt+r set_tab_title

--- a/global/dot-config/kitty/kitty.conf
+++ b/global/dot-config/kitty/kitty.conf
@@ -37,14 +37,15 @@ mouse_map ctrl+left press ungrabbed mouse_selection rectangle
 mouse_map ctrl+shift+left press ungrabbed mouse_selection rectangle
 
 # tabs
-map ctrl+shift+r set_tab_title
+map ctrl+alt+r set_tab_title
 tab_bar_edge bottom
 tab_bar_align right
 tab_title_template "{title.split(':')[0]}"
 tab_bar_style fade 
 tab_fade 0.25 0.5 0.75 1
 
-
+# unbind
+map ctrl+shift+r no_op
 
 # =============================================================================
 # colors
