hypr: launch flameshot on startup

--- a/global/dot-config/hypr/startup.conf
+++ b/global/dot-config/hypr/startup.conf
@@ -3,6 +3,7 @@ exec-once=redshift
 exec-once=eww daemon
 exec-once=eyes
 exec-once=eww -c ~/.config/eww/bar open bar
+exec-once=flameshot
 
 # set cursor theme
 exec-once=hyprctl setcursor Sweet-cursors 24
