tmux: Q to kill and attach main

--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -113,7 +113,7 @@ bind-key "*" select-window -t 10
 bind-key C-h run-shell "tmux-swap-window left"
 bind-key C-l run-shell "tmux-swap-window right"
 
-bind-key Q kill-session
+bind-key Q run-shell "tm attach main; tm kill $(tmux display-message -p '#S')"
 bind-key q kill-window
 bind-key w kill-pane
 
@@ -129,7 +129,6 @@ bind-key c run-shell "tm config"
 bind-key C run-shell "tm attach cfg"
 bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (printf '\nShowing dotfiles lazygit instead...\n' && read -srn1 && .lg)"
 bind-key i new-window -n ipy "ipython --TerminalInteractiveShell.editing_mode=vi"
-bind-key D run-shell "tm attach main; tm kill $(tmux display-message -p '#S')"
 bind-key \\ switch-client -l
 
 # toggle status bar
