rofi: add and polish for wayland

--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -2,14 +2,15 @@ $mod = SUPER
 
 # Programs
 bind = $mod, Return, exec, kitty
+bind = $mod SHIFT, Return, exec, [noanim]rofi -show drun -config $HOME/.config/rofi/main.rasi
 bind = $mod, e, exec, nemo
 bind = $mod, s, exec, [noanim]flameshot gui
 bind = $mod SHIFT, s, exec, [noanim]flameshot gui
 bind = $mod, w, exec, firefox
 bind = $mod SHIFT, w, exec, firefox-float
 bind = $mod SHIFT, g, exec, firefox "https://github.com/e-cal"
-bind = $mod SHIFT, m, exec, [workspace 6]thunderbird
-bind = $mod CONTROL, s, exec, [workspace 5;tiled]spotify
+bind = $mod SHIFT, m, exec, [workspace 5]thunderbird
+bind = $mod CONTROL, s, exec, [workspace 6;tiled]spotify
 bind = $mod SHIFT, c, exec, hyprpicker -a
 
 # Control
