--- a/global/dot-config/hypr/windows.conf
+++ b/global/dot-config/hypr/windows.conf
@@ -16,8 +16,8 @@ windowrule=opacity 1.0 override 1.0 override,title:Picture\-in\-Picture
 # windowrule=nodim,title:Picture-in-Picture
 
 windowrule=fakefullscreen,firefox
-windowrule=nofullscreenrequest,title:Enter name of file to save to…
-windowrule=nofullscreenrequest,title:Save As
+windowrule=nofullscreenrequest,title:.*save.*
+windowrule=nofullscreenrequest,title:.*Save.*
 
 
 workspace=special:scratch,gapsin:-50,gapsout:-50
