hypr: universal monitor config

--- a/global/dot-config/hypr/devices.conf
+++ b/global/dot-config/hypr/devices.conf
@@ -1,8 +1,9 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-# monitor=,preferred,auto,auto
-monitor = DP-3,preferred,0x0,1
-# monitor = ,preferred,1920x0,1
-monitor = ,preferred,2560x0,1
+
+monitor = DP-3,2560x1440@144,1920x0,1
+monitor = DP-2,preferred,0x0,1
+monitor = ,preffered,auto,1
+monitor = ,preffered,auto,1
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
