hypr: update blur settings

--- a/global/dot-config/hypr/windows.conf
+++ b/global/dot-config/hypr/windows.conf
@@ -49,10 +49,12 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 0.85
 
-    blur = true
-    blur_size = 7
-    blur_passes = 1
-    blur_new_optimizations = true
+    blur {
+        enabled = true
+        size = 7
+        passes = 1
+        new_optimizations = true
+    }
 
     dim_inactive = true
     dim_strength = 0.1
