--- a/global/dot-config/hypr/devices.conf
+++ b/global/dot-config/hypr/devices.conf
@@ -1,9 +1,8 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
+monitor = eDP-1,preffered,0x0,1
 monitor = DP-3,2560x1440@144,1920x0,1
 monitor = DP-2,preferred,0x0,1
-monitor = ,preffered,auto,1
-monitor = ,preffered,auto,1
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
