hypr: set main monitor on startup

--- a/global/dot-config/hypr/startup.conf
+++ b/global/dot-config/hypr/startup.conf
@@ -1,8 +1,7 @@
 exec-once=hyprpaper
-exec-once=redshift
 exec-once=eww daemon
-exec-once=eyes
 exec-once=eww -c ~/.config/eww/bar open bar
+exec-once=eyes
 exec-once=flameshot
 
 # set cursor theme
@@ -15,3 +14,6 @@ exec-once=wl-paste -p --watch wl-copy -pc
 
 # auth agent (for privilege escalation requests)
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
+
+# make DP-3 main monitor
+exec-once=hyprctl dispatch moveworkspacetomonitor "1 DP-3"
