hypr: mod+alt+f fakefullscreen

--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -26,6 +26,7 @@ bind = CONTROL ALT, Delete, exec, eww -c ~/.config/eww/bar close bar; launch_das
 bind = $mod,r, togglesplit, 
 bind = $mod, f, togglefloating,
 bind = $mod SHIFT, f, fullscreen, 
+bind = $mod alt, f, fakefullscreen, 
 bind = $mod CONTROL, f, exec, togglebar
 bind = $mod, p, pseudo, 
 
