hypr: disable global firefox fakefullscreen, apply on launch instead

--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -8,7 +8,7 @@ bind = $mod SHIFT, Return, exec, [noanim]rofi -show drun -config $HOME/.config/r
 bind = $mod, e, exec, nemo
 bind = $mod, s, exec, [noanim]flameshot gui
 bind = $mod SHIFT, s, exec, [noanim]flameshot gui
-bind = $mod, w, exec, firefox
+bind = $mod, w, exec, firefox-ff
 bind = $mod SHIFT, w, exec, firefox-float
 bind = $mod SHIFT, g, exec, firefox "https://github.com/e-cal"
 bind = $mod SHIFT, m, exec, [workspace 5]thunderbird
