--- a/global/dot-config/hypr/windows.conf
+++ b/global/dot-config/hypr/windows.conf
@@ -15,11 +15,6 @@ windowrule=noblur,title:Picture\-in\-Picture
 windowrule=opacity 1.0 override 1.0 override,title:Picture\-in\-Picture
 # windowrule=nodim,title:Picture-in-Picture
 
-windowrule=fakefullscreen,firefox
-windowrule=nofullscreenrequest,title:.*save.*
-windowrule=nofullscreenrequest,title:.*Save.*
-
-
 workspace=special:scratch,gapsin:-50,gapsout:-50
 workspace=special:ask,gapsin:-50,gapsout:-50
 workspace=special:browser,gapsin:-50,gapsout:-50
@@ -51,14 +46,19 @@ decoration {
 
     blur {
         enabled = true
-        size = 7
+        size = 1
         passes = 1
+        noise = 0.01
+        contrast = 0.8916
+        brightness = 0.8172
+        ignore_opacity = false
+        special = true
         new_optimizations = true
     }
 
-    dim_inactive = true
-    dim_strength = 0.1
-    dim_special = 0.3
+    # dim_inactive = true
+    # dim_strength = 0.1
+    # dim_special = 0.3
 
     drop_shadow = yes
     shadow_range = 4
@@ -67,6 +67,8 @@ decoration {
 }
 
 misc {
+    disable_hyprland_logo = true
+    disable_splash_rendering = true
     animate_manual_resizes = true
     always_follow_on_dnd = true
     enable_swallow = false
