hypr: move workspace to monitor on focus

--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -139,16 +139,16 @@ bind = $mod SHIFT, K, resizeactive, 0 -30
 bind = $mod SHIFT, J, resizeactive, 0 30
 
 # Workspaces
-bind = $mod, plus, workspace, 1
-bind = $mod, bracketleft, workspace, 2
-bind = $mod, braceleft, workspace, 3
-bind = $mod, parenleft, workspace, 4
-bind = $mod, numbersign, workspace, 5
-bind = $mod, equal, workspace, 6
-bind = $mod, parenright, workspace, 7
-bind = $mod, braceright, workspace, 8
-bind = $mod, bracketright, workspace, 9
-bind = $mod, asterisk, workspace, 10
+bind = $mod, plus, exec, focusws 1
+bind = $mod, bracketleft, exec, focusws 2
+bind = $mod, braceleft, exec, focusws 3
+bind = $mod, parenleft, exec, focusws 4
+bind = $mod, numbersign, exec, focusws 5
+bind = $mod, equal, exec, focusws 6
+bind = $mod, parenright, exec, focusws 7
+bind = $mod, braceright, exec, focusws 8
+bind = $mod, bracketright, exec, focusws 9
+bind = $mod, asterisk, exec, focusws 10
 
 bind = $mod SHIFT, plus, movetoworkspacesilent, 1
 bind = $mod SHIFT, bracketleft, movetoworkspacesilent, 2
