hypr: no opacity on youtube

--- a/global/dot-config/hypr/windows.conf
+++ b/global/dot-config/hypr/windows.conf
@@ -13,7 +13,8 @@ windowrule=nofullscreenrequest,zoom
 windowrule=nofullscreenrequest,title:Picture\-in\-Picture
 windowrule=noblur,title:Picture\-in\-Picture
 windowrule=opacity 1.0 override 1.0 override,title:Picture\-in\-Picture
-# windowrule=nodim,title:Picture-in-Picture
+
+windowrule=opacity 1.0 override 1.0 override,title:.*YouTube.*
 
 workspace=special:scratch,gapsin:-50,gapsout:-50
 workspace=special:ask,gapsin:-50,gapsout:-50
