hypr: no opacity on TV

--- a/global/dot-config/hypr/windows.conf
+++ b/global/dot-config/hypr/windows.conf
@@ -15,6 +15,7 @@ windowrule=noblur,title:Picture\-in\-Picture
 windowrule=opacity 1.0 override 1.0 override,title:Picture\-in\-Picture
 
 windowrule=opacity 1.0 override 1.0 override,title:.*YouTube.*
+windowrule=opacity 1.0 override 1.0 override,title:.*S[0-9]+:E[0-9]+.*
 
 workspace=special:scratch,gapsin:-50,gapsout:-50
 workspace=special:ask,gapsin:-50,gapsout:-50
