hypr: lower brightness keybind

--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -36,6 +36,7 @@ bind = $mod, p, pseudo,
 bind=$mod, Space, submap, general
 submap=general
 # brightness
+bind=SHIFT,grave,exec,brightness set 2
 bind=,grave,exec,brightness set 5
 bind=,plus,exec,brightness set 10
 bind=,bracketleft,exec,brightness set 20
@@ -48,6 +49,7 @@ bind=,braceright,exec,brightness set 80
 bind=,bracketright,exec,brightness set 90
 bind=,asterisk,exec,brightness set 100
 # exit
+bind=SHIFT,grave,submap,reset
 bind=,grave,submap,reset
 bind=,plus,submap,reset
 bind=,bracketleft,submap,reset
