--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -11,8 +11,8 @@ bind = $mod SHIFT, s, exec, [noanim]flameshot gui
 bind = $mod, w, exec, firefox-ff
 bind = $mod SHIFT, w, exec, firefox-float
 bind = $mod SHIFT, g, exec, firefox "https://github.com/e-cal"
-bind = $mod SHIFT, m, exec, [workspace 5]thunderbird
-bind = $mod CONTROL, s, exec, [workspace 6;tiled]spotify
+bind = $mod SHIFT, m, exec, [workspace 5]focus-mail
+bind = $mod CONTROL, s, exec, [workspace 6;tiled]focus-spotify
 bind = $mod SHIFT, c, exec, hyprpicker -a
 
 bind = $mod CONTROL, e, exec, eyes toggle
