--- a/global/dot-config/hypr/devices.conf
+++ b/global/dot-config/hypr/devices.conf
@@ -6,7 +6,7 @@ monitor = ,preferred,0x0,1
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = code,code-dvorak
+    kb_layout = code
     kb_variant=
     kb_model=
     # https://gist.github.com/jatcwang/ae3b7019f219b8cdc6798329108c9aee
