--- a/global/dot-config/kitty/kitty.conf
+++ b/global/dot-config/kitty/kitty.conf
@@ -10,20 +10,38 @@ repaint_delay           5
 window_padding_width 0 0.5 0 0.5
 
 # font
+# kitty +list-fonts --psnames
 
-font_family             JetBrains Mono Nerd Font Complete Regular
-bold_font               JetBrains Mono Nerd Font Complete Bold
-italic_font             JetBrains Mono Nerd Font Complete Italic
-bold_italic_font        JetBrains Mono Nerd Font Complete Bold Italic
+# ttf-jetbrains-mono-nerd
+# font_family             JetBrainsMono NF Regular
+# bold_font               JetBrainsMono NF Bold
+# italic_font             JetBrainsMono NF Italic
+# bold_italic_font        JetBrainsMono NF Bold Italic
+# font_features JetBrainsMonoNF-Regular +zero
+# font_features JetBrainsMonoNF-Bold +zero
+# font_features JetBrainsMonoNF-Italic +zero
+# font_features JetBrainsMonoNF-BoldItalic +zero
 
-font_size               11
+# nerd-fonts-git
+# font_family             JetBrains Mono Nerd Font Complete Regular
+# bold_font               JetBrains Mono Nerd Font Complete Bold
+# italic_font             JetBrains Mono Nerd Font Complete Italic
+# bold_italic_font        JetBrains Mono Nerd Font Complete Bold Italic
+# font_features JetBrainsMono-Nerd-Font +zero
+# font_features JetBrainsMonoNerdFontComplete-Regular +zero
+# font_features JetBrainsMonoNerdFontComplete-Bold +zero
+# font_features JetBrainsMonoNerdFontComplete-Italic +zero
+
+# ttf-fantasque-nerd
+font_family             FantasqueSansM Nerd Font Regular
+bold_font               FantasqueSansM Nerd Font Bold
+italic_font             FantasqueSansM Nerd Font Italic
+bold_italic_font        FantasqueSansM Nerd Font Bold Italic
+
+font_size               12
 disable_ligatures       never
 force_ltr               yes
 
-font_features JetBrainsMono-Nerd-Font +zero
-font_features JetBrainsMonoNerdFontComplete-Regular +zero
-font_features JetBrainsMonoNerdFontComplete-Bold +zero
-font_features JetBrainsMonoNerdFontComplete-Italic +zero
 
 
 # cursor
