--- a/global/dot-config/hypr/startup.conf
+++ b/global/dot-config/hypr/startup.conf
@@ -3,6 +3,7 @@ exec-once=eww daemon
 exec-once=eww -c ~/.config/eww/bar open bar
 exec-once=eyes
 exec-once=flameshot
+exec-once=~/.config/hypr/scripts/startup
 
 # set cursor theme
 exec-once=hyprctl setcursor Sweet-cursors 24
