--- a/global/dot-config/hypr/devices.conf
+++ b/global/dot-config/hypr/devices.conf
@@ -1,8 +1,8 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
-monitor = eDP-1,preffered,auto,1
+monitor = eDP-1,preffered,0x0,1
 monitor = DP-2,2560x1440@144,auto,1
-monitor = ,preferred,0x0,1
+monitor = ,preferred,1920x0,1
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
