--- a/global/dot-config/hypr/devices.conf
+++ b/global/dot-config/hypr/devices.conf
@@ -15,17 +15,14 @@ input {
 
     follow_mouse = 1
 
-    touchpad {
-        natural_scroll = no
-    }
-
     sensitivity = 0 # [-1.0, 1.0]
     accel_profile = flat
 
     touchpad {
-            disable_while_typing = no
-            middle_button_emulation = yes
-            clickfinger_behavior = yes
+            disable_while_typing = true
+            middle_button_emulation = true
+            clickfinger_behavior = true
+            natural_scroll = false
     }
 }
 
