hypr: flameshot window rules

--- a/global/dot-config/hypr/windows.conf
+++ b/global/dot-config/hypr/windows.conf
@@ -21,6 +21,12 @@ workspace=special:scratch,gapsin:-50,gapsout:-50
 workspace=special:ask,gapsin:-50,gapsout:-50
 workspace=special:browser,gapsin:-50,gapsout:-50
 
+# flameshot
+windowrule=nofullscreenrequest,flameshot
+windowrule=float,flameshot
+windowrule=monitor 0,flameshot
+windowrule=move 0 0,flameshot
+
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     gaps_in = 2
