--- a/global/dot-config/starship.toml
+++ b/global/dot-config/starship.toml
@@ -97,7 +97,7 @@ style = "white"
 conflicted = "󰗖 "
 ahead = "󰐙 ×${count} "
 behind = "󰍷 ×${count} "
-diverged = "󰍷 ×${ahead_count} 󰐙×${behind_count} "
+diverged = "󰐙 ×${ahead_count} 󰍷 ×${behind_count} "
 modified = "󰏫 ×${count} "
 untracked = "󰈤 ×${count} "
 stashed = "󰆓 "
