--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -96,11 +96,15 @@ binde=,l,moveactive,10 0
 binde=,h,moveactive,-10 0
 binde=,k,moveactive,0 -10
 binde=,j,moveactive,0 10
+binde=SHIFT,l,moveactive,50 0
+binde=SHIFT,h,moveactive,-50 0
+binde=SHIFT,k,moveactive,0 -50
+binde=SHIFT,j,moveactive,0 50
 # resize
-binde=SHIFT,l,resizeactive,20 0
-binde=SHIFT,h,resizeactive,-20 0
-binde=SHIFT,k,resizeactive,0 -20
-binde=SHIFT,j,resizeactive,0 20
+binde=CONTROL,l,resizeactive,20 0
+binde=CONTROL,h,resizeactive,-20 0
+binde=CONTROL,k,resizeactive,0 -20
+binde=CONTROL,j,resizeactive,0 20
 # splits
 bind = ,r, togglesplit, # rotate
 bind = ,f, splitratio, exact 1.5 # focus
