--- a/global/dot-config/hypr/windows.conf
+++ b/global/dot-config/hypr/windows.conf
@@ -1,34 +1,24 @@
-# Floating
-# windowrulev2 = opacity 1 0.05,floating:1
-
-# Comms
-windowrule=workspace 4,Microsoft Teams - Preview
-windowrule=workspace 4,Slack
-windowrule=workspace 4,discord
-# windowrule=workspace 4,zoom
-windowrule=nofullscreenrequest,zoom
-
-
 # PiP
 windowrule=nofullscreenrequest,title:Picture\-in\-Picture
 windowrule=noblur,title:Picture\-in\-Picture
 windowrule=opacity 1.0 override 1.0 override,title:Picture\-in\-Picture
 
+# YouTube
 windowrule=opacity 1.0 override 1.0 override,title:.*YouTube.*
 windowrule=opacity 1.0 override 1.0 override,title:.*S[0-9]+:E[0-9]+.*
 
+# Special Workspaces
 workspace=special:scratch,gapsin:-50,gapsout:-50
 workspace=special:ask,gapsin:-50,gapsout:-50
 workspace=special:browser,gapsin:-50,gapsout:-50
 
-# flameshot
+# Flameshot
 windowrule=nofullscreenrequest,flameshot
 windowrule=float,flameshot
 windowrule=monitor 0,flameshot
 windowrule=move 0 0,flameshot
 
 general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
     gaps_in = 2
     gaps_out = 5
 
@@ -36,17 +26,10 @@ general {
     col.active_border = rgba(fab38755) rgba(f38ba855) 145deg
     col.inactive_border = rgba(000000a0)
 
-    # col.group_border = rgba(77770066)
-    col.group_border = rgba(fab38755) rgba(f38ba855) 145deg
-    # col.group_border_active = rgba(ffff0066)
-    col.group_border_active = rgba(fab38755) rgba(f38ba855) 145deg
-
     layout = dwindle
 }
 
 decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     rounding = 10
 
     active_opacity = 1.0
@@ -64,10 +47,6 @@ decoration {
         new_optimizations = true
     }
 
-    # dim_inactive = true
-    # dim_strength = 0.1
-    # dim_special = 0.3
-
     drop_shadow = yes
     shadow_range = 4
     shadow_render_power = 3
@@ -80,12 +59,6 @@ misc {
     animate_manual_resizes = true
     always_follow_on_dnd = true
     enable_swallow = false
-
-    render_titles_in_groupbar = yes
-    groupbar_titles_font_size = 8
-    groupbar_gradients = no
-    # groupbar_text_color = rgba(ffffffaa)
-    groupbar_text_color = rgba(eba0accc)
 }
 
 animations {
