--- a/global/dot-config/hypr/startup.conf
+++ b/global/dot-config/hypr/startup.conf
@@ -1,6 +1,7 @@
 exec-once=hyprpaper
 exec-once=eww daemon
-exec-once=eww -c ~/.config/eww/bar open bar
+exec-once=eww open bar
+exec-once=eww open bar2
 exec-once=eyes
 exec-once=flameshot
 exec-once=~/.config/hypr/scripts/startup
