hypr: higher monitor refresh rate + razer mouse

--- a/global/dot-config/hypr/devices.conf
+++ b/global/dot-config/hypr/devices.conf
@@ -2,7 +2,7 @@
 
 monitor = eDP-1,preffered,0x0,1
 monitor = DP-2,2560x1440@144,auto,1
-monitor = ,preferred,1920x0,1
+monitor = ,1920x1080@75,1920x0,1
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -19,17 +19,22 @@ input {
     accel_profile = flat
 
     touchpad {
-            disable_while_typing = true
-            middle_button_emulation = true
-            clickfinger_behavior = true
-            natural_scroll = false
+        disable_while_typing = true
+        middle_button_emulation = true
+        clickfinger_behavior = true
+        natural_scroll = false
     }
+}
+
+device:syna2393:00-06cb:7a13-touchpad {
+    accel_profile = adaptive
 }
 
 device:at-translated-set-2-keyboard {
     kb_options = caps:escape
 }
 
-device:syna2393:00-06cb:7a13-touchpad {
-    accel_profile = adaptive
+
+device:razer-atheris-mouse {
+    sensitivity = 0.1
 }
