tmux: leader f fullscreen pane

--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -113,6 +113,7 @@ bind-key "*" select-window -t 10
 bind-key C-h run-shell "tmux-swap-window left"
 bind-key C-l run-shell "tmux-swap-window right"
 
+bind-key f resize-pane -Z
 bind-key Q run-shell "tm attach main; tm kill $(tmux display-message -p '#S')"
 bind-key q kill-window
 bind-key w kill-pane
@@ -130,10 +131,6 @@ bind-key C run-shell "tm attach cfg"
 bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (printf '\nShowing dotfiles lazygit instead...\n' && read -srn1 && cd ~/.dotfiles && lazygit)"
 bind-key i new-window -n ipy "ipython --TerminalInteractiveShell.editing_mode=vi"
 bind-key \\ switch-client -l
-
-# toggle status bar
-bind-key f if-shell "[[ `tmux show-option -qv status` != on ]]" "set-option status off" "set-option status on"
-
 
 
 # set -g status on
