hypr: add extra monitor option

--- a/global/dot-config/hypr/devices.conf
+++ b/global/dot-config/hypr/devices.conf
@@ -3,6 +3,7 @@
 monitor = eDP-1,preffered,0x0,1
 monitor = DP-2,2560x1440@144,auto,1
 monitor = ,1920x1080@75,1920x0,1
+monitor = ,preffered,auto,1
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
