tmux: add new session popup

--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -114,16 +114,15 @@ bind-key C-h run-shell "tmux-swap-window left"
 bind-key C-l run-shell "tmux-swap-window right"
 
 bind-key f resize-pane -Z
-bind-key Q run-shell "tm attach main; tm kill $(tmux display-message -p '#S')"
-bind-key q kill-window
+bind-key q run-shell "tm attach main; tm kill $(tmux display-message -p '#S')"
+bind-key Q kill-window
 bind-key w kill-pane
 
-# custom commands
 bind-key Enter display-popup -E "tm"
+bind-key N display-popup -E "tm new"
 bind-key S run-shell "tmux choose-session"
 bind-key t run-shell "toggleterm h"
 bind-key T run-shell "toggleterm v"
-bind-key N new-window -d -n jn "tmux send-keys -t jn 'jupyter notebook' Enter;zsh"
 bind-key ? run-shell "tmux-ask"
 bind-key . run-shell "tmux display-popup -E cfgdirs tmux"
 bind-key c run-shell "tm config"
@@ -131,26 +130,5 @@ bind-key C run-shell "tm attach cfg"
 bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (printf '\nShowing dotfiles lazygit instead...\n' && read -srn1 && cd ~/.dotfiles && lazygit)"
 bind-key i new-window -n ipy "ipython --TerminalInteractiveShell.editing_mode=vi"
 bind-key \\ switch-client -l
-
-
-# set -g status on
-# set -g status-bg black
-# set -g status-fg white
-# set -g status-interval 60
-# set -g status-left-length 30
-# set -g status-right-length 200
-# set -g status-left '#[fg=black,bg=cyan]  #S #[fg=cyan,bg=black]#[default] '
-# set -g status-right '#[fg=color8]#(tmux-song)#(tmux-battery)#[fg=color15]#[fg=cyan, bg=color15]  %a %b %d #[fg=cyan]#[fg=black, bg=cyan]  %H:%M '
-
-# setw -g window-status-style fg='color8',bg='color15'
-# setw -g window-status-activity-style fg='orange blink',bg='colour15'
-# setw -g window-status-current-style fg='cyan',bg='colour15'
-# setw -g window-status-separator ''
-# setw -g window-status-format '#[fg=colour237,bg=black]█#[default]#W#[fg=colour237,bg=black]█'
-# setw -g window-status-current-format '#[fg=color15,bg=black]█#[default]#W#[fg=colour15,bg=black]█'
-
-# set-option -ga pane-active-border-style bg=default,fg=color8
-# set-option -ga pane-border-style bg=default,fg=color8
-
 
 run "$HOME/.config/tmux/theme"
