hypr: bt le on startup

--- a/global/dot-config/hypr/startup.conf
+++ b/global/dot-config/hypr/startup.conf
@@ -16,3 +16,6 @@ exec-once=wl-paste -p --watch wl-copy -pc
 
 # auth agent (for privilege escalation requests)
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
+
+# bluetooth le
+exec-once=sudo btmgmt le on
