--- a/global/dot-config/kitty/kitty.conf
+++ b/global/dot-config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # shell
-shell                   zsh -c 'tm startup'
+shell                   zsh -c 'tm startup; zsh'
 enable_audio_bell       no
 confirm_os_window_close 0
 
