hypr: new startup, add piantor, twitch

--- a/global/dot-config/hypr/devices.conf
+++ b/global/dot-config/hypr/devices.conf
@@ -27,6 +27,10 @@ input {
     }
 }
 
+device:beekeeb-piantor-pro-keyboard {
+    kb_layout=us
+}
+
 device:syna2393:00-06cb:7a13-touchpad {
     accel_profile = adaptive
 }
@@ -34,7 +38,6 @@ device:syna2393:00-06cb:7a13-touchpad {
 device:at-translated-set-2-keyboard {
     kb_options = caps:escape
 }
-
 
 device:razer-atheris-mouse {
     sensitivity = 0.1
