--- a/global/dot-config/hypr/windows.conf
+++ b/global/dot-config/hypr/windows.conf
@@ -1,11 +1,10 @@
-# PiP
+# No opacity on media
 windowrule=nofullscreenrequest,title:Picture\-in\-Picture
 windowrule=noblur,title:Picture\-in\-Picture
 windowrule=opacity 1.0 override 1.0 override,title:Picture\-in\-Picture
-
-# YouTube
 windowrule=opacity 1.0 override 1.0 override,title:.*YouTube.*
-windowrule=opacity 1.0 override 1.0 override,title:.*S[0-9]+:E[0-9]+.*
+windowrule=opacity 1.0 override 1.0 override,title:.*Twitch.*
+windowrule=opacity 1.0 override 1.0 override,title:.*S[0-9]+:E[0-9]+.* # tv
 
 # Special Workspaces
 workspace=special:scratch,gapsin:-50,gapsout:-50
