vscode: more settings idk

--- a/global/dot-config/Code - Insiders/User/settings.json
+++ b/global/dot-config/Code - Insiders/User/settings.json
@@ -29,5 +29,6 @@
     "window.menuBarVisibility": "toggle",
     "workbench.editor.showTabs": "single",
     "explorer.openEditors.visible": 1,
-    "workbench.editor.revealIfOpen": true
+    "workbench.editor.revealIfOpen": true,
+    "update.showReleaseNotes": false
 }
