--- a/global/dot-config/hypr/binds-piantor.conf
+++ b/global/dot-config/hypr/binds-piantor.conf
@@ -72,6 +72,28 @@ bind = $mod SHIFT, i, movetoworkspacesilent, 8
 bind = $mod SHIFT, o, movetoworkspacesilent, 9
 bind = $mod SHIFT, p, movetoworkspacesilent, 10
 
+bind = $mod, plus, exec, focusws 1
+bind = $mod, bracketleft, exec, focusws 2
+bind = $mod, braceleft, exec, focusws 3
+bind = $mod, parenleft, exec, focusws 4
+bind = $mod, numbersign, exec, focusws 5
+bind = $mod, equal, exec, focusws 6
+bind = $mod, parenright, exec, focusws 7
+bind = $mod, braceright, exec, focusws 8
+bind = $mod, bracketright, exec, focusws 9
+bind = $mod, asterisk, exec, focusws 10
+
+bind = $mod SHIFT, plus, movetoworkspacesilent, 1
+bind = $mod SHIFT, bracketleft, movetoworkspacesilent, 2
+bind = $mod SHIFT, braceleft, movetoworkspacesilent, 3
+bind = $mod SHIFT, parenleft, movetoworkspacesilent, 4
+bind = $mod SHIFT, numbersign, movetoworkspacesilent, 5
+bind = $mod SHIFT, equal, movetoworkspacesilent, 6
+bind = $mod SHIFT, parenright, movetoworkspacesilent, 7
+bind = $mod SHIFT, braceright, movetoworkspacesilent, 8
+bind = $mod SHIFT, bracketright, movetoworkspacesilent, 9
+bind = $mod SHIFT, asterisk, movetoworkspacesilent, 10
+
 # Floats
 binde = $mod, Right, moveactive, 30 0
 binde = $mod, Left, moveactive, -30 0
