hypr: window rules for xwaylandvideobridge

--- a/global/dot-config/hypr/windows.conf
+++ b/global/dot-config/hypr/windows.conf
@@ -17,6 +17,13 @@ windowrule=float,flameshot
 windowrule=monitor 0,flameshot
 windowrule=move 0 0,flameshot
 
+# Screenshare through xwaylandvideobridge
+windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
+windowrulev2 = noblur,class:^(xwaylandvideobridge)$
+
 general {
     gaps_in = 2
     gaps_out = 5
