--- a/global/dot-config/hypr/startup.conf
+++ b/global/dot-config/hypr/startup.conf
@@ -1,9 +1,3 @@
-exec-once=hyprpaper
-exec-once=eww daemon
-exec-once=eyes
-exec-once=flameshot
-exec-once=~/.config/hypr/scripts/startup
-
 # set cursor theme
 exec-once=hyprctl setcursor Sweet-cursors 24
 exec-once=gsettings set org.gnome.desktop.interface cursor-theme 'Sweet-cursors'
@@ -17,3 +11,11 @@ exec-once=/usr/lib/polkit-kde-authentication-agent-1
 
 # bluetooth le
 exec-once=sudo btmgmt le on
+
+# launch stuff
+exec-once=hyprpaper
+exec-once=eww daemon
+exec-once=eyes
+exec-once=flameshot
+exec-once=~/.config/hypr/scripts/startup
+exec-once=~/.config/hypr/scripts/desktop-portal
