--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -123,7 +123,7 @@ bind-key N display-popup -E "tm new"
 bind-key S run-shell "tmux choose-session"
 bind-key t run-shell "toggleterm h"
 bind-key T run-shell "toggleterm v"
-bind-key ? run-shell "tmux-ask"
+bind-key ? run-shell 'tmux neww -n "ask" zsh -c "ask;zsh"'
 bind-key . run-shell "tmux display-popup -E cfgdirs tmux"
 bind-key c run-shell "tm config"
 bind-key C run-shell "tm attach cfg"
