hypr: tweak workspace binds

--- a/global/dot-config/hypr/binds.conf
+++ b/global/dot-config/hypr/binds.conf
@@ -50,22 +50,22 @@ bind = $mod CONTROL,    k,      swapwindow, u
 bind = $mod CONTROL,    j,      swapwindow, d
 
 # Workspaces
-# bind = $mod, q, exec, focusws 1
-# bind = $mod, w, exec, focusws 2
-# bind = $mod, e, exec, focusws 3
-# bind = $mod, r, exec, focusws 4
-# bind = $mod, t, exec, focusws 5
+bind = $mod, q, exec, focusws 1
+bind = $mod, w, exec, focusws 2
+bind = $mod, e, exec, focusws 3
+bind = $mod, r, exec, focusws 4
+bind = $mod, t, exec, focusws 5
 # bind = $mod, y, exec, focusws 6
 # bind = $mod, u, exec, focusws 7
 # bind = $mod, i, exec, focusws 8
 # bind = $mod, o, exec, focusws 9
 # bind = $mod, p, exec, focusws 10
-#
-# bind = $mod SHIFT, q, movetoworkspacesilent, 1
-# bind = $mod SHIFT, w, movetoworkspacesilent, 2
-# bind = $mod SHIFT, e, movetoworkspacesilent, 3
-# bind = $mod SHIFT, r, movetoworkspacesilent, 4
-# bind = $mod SHIFT, t, movetoworkspacesilent, 5
+
+bind = $mod SHIFT, q, movetoworkspacesilent, 1
+bind = $mod SHIFT, w, movetoworkspacesilent, 2
+bind = $mod SHIFT, e, movetoworkspacesilent, 3
+bind = $mod SHIFT, r, movetoworkspacesilent, 4
+bind = $mod SHIFT, t, movetoworkspacesilent, 5
 # bind = $mod SHIFT, y, movetoworkspacesilent, 6
 # bind = $mod SHIFT, u, movetoworkspacesilent, 7
 # bind = $mod SHIFT, i, movetoworkspacesilent, 8
