hypr: add albert stuff

--- a/global/dot-config/hypr/windows.conf
+++ b/global/dot-config/hypr/windows.conf
@@ -17,6 +17,15 @@ windowrule=float,flameshot
 windowrule=monitor 0,flameshot
 windowrule=move 0 0,flameshot
 
+# Albert launcher
+# windowrule=nofullscreenrequest,albert
+windowrule=float,albert
+windowrule=noblur,albert
+windowrule=noanim,albert
+windowrule=noborder,albert
+windowrule=noshadow,albert
+windowrule=dimaround,albert
+
 # Screenshare through xwaylandvideobridge
 windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
 windowrulev2 = noanim,class:^(xwaylandvideobridge)$
