--- a/global/dot-config/hypr/startup.conf
+++ b/global/dot-config/hypr/startup.conf
@@ -15,7 +15,8 @@ exec-once=sudo btmgmt le on
 # launch stuff
 exec-once=hyprpaper
 exec-once=eww daemon
-exec-once=eyes
 exec-once=flameshot
+exec-once=QT_QPA_PLATFORM=xcb albert 
+# exec-once=eyes
 exec-once=~/.config/hypr/scripts/startup
-exec-once=~/.config/hypr/scripts/desktop-portal
+exec-once=~/.config/hypr/scripts/event-handlers
